# PepDB

./: .gitignore  CMakeLists.txt  PepDB.doxyfile
doc/: keydef.xml  uniref.xsd.xml
sql/: insertIntoPepDB.sql  pepdb.mwb
src/: CMakeLists.txt
src/common/: exception.cpp  exception.h
src/guiapp/: CMakeLists.txt  jobstatuswidget.cpp  jobstatuswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  newprojectdialog.cpp  newprojectdialog.h  resulttable.cpp  resulttable.h  searchwidget.cpp  searchwidget.h  settingsdialog.cpp  settingsdialog.h
src/guiapp/forms/: jobstatuswidget.ui  mainwindow.ui  newprojectdialog.ui  resulttable.ui  searchwidget.ui  settingsdialog.ui
src/inputplugins/: CMakeLists.txt
src/inputplugins/uniprot/: CMakeLists.txt  uniprotinputplugin.cpp  uniprotinputplugin.h  uniprotxmlreader.cpp  uniprotxmlreader.h
src/interfaces/: inputplugininterface.h
src/lib/: CMakeLists.txt  SqlQueryBuilder.cpp  SqlQueryBuilder.h  featuretablemodel.cpp  featuretablemodel.h  job.cpp  job.h  pluginloader.cpp  pluginloader.h  project.cpp  project.h  proteindatabase.cpp  proteindatabase.h  proteindataset.h
